# audiodecoder.opus

./: CMakeLists.txt  FindOpus.cmake  FindOpusFile.cmake
audiodecoder.opus/: addon.xml  addon.xml.in
depends/common/opus/: CMakeLists.txt  opus.txt
depends/common/opusfile/: CMakeLists.txt  opusfile.txt
src/: OpusCodec.cpp
